Change existing modals to use listgroups (much prettier)

--- a/DanceCalc/m4d/Views/Shared/_filtermodal.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_filtermodal.cshtml
@@ -6,28 +6,20 @@
                 <h4 class="modal-title" id="filterModalLabel"><span data-bind="text: title"></span> by <span data-bind="text: artist"></span></h4>
             </div>
             <div class="modal-body">
-                <div class="filter-list">
-                    <p class="filter-item" data-bind="if:filteredUrl">
-                        <a data-bind="attr:{href:filteredUrl().replace('{0}','%2B')}"><span class="glyphicon glyphicon-filter"></span> Filter the list to include only songs tagged as <span class="filter-tag" data-bind="text:tagValue"></span></a>
-                    </p>
-                    <p class="filter-item" data-bind="if:filteredUrl">
-                        <a data-bind="attr:{href:filteredUrl().replace('{0}','%2D')}"><span class="glyphicon glyphicon-filter"></span> Filter the list to include only songs <span class="filter-negate">not</span> tagged as <span class="filter-tag" data-bind="text:tagValue"></span></a>
-                    </p>
-                    <p class="filter-item" data-bind="if:danceUrl">
-                        <a data-bind="attr:{href:danceUrl().replace('{0}','%2B')}"><span class="glyphicon glyphicon-list"></span> List all <span class="filter-dance" data-bind="text:danceName"></span> songs tagged as <span data-bind="text:tagValue"></span></a>
-                    </p>
-                    <p class="filter-item" data-bind="if:danceUrl">
-                        <a data-bind="attr:{href:danceUrl().replace('{0}','%2D')}"><span class="glyphicon glyphicon-list"></span> List all <span class="filter-dance" data-bind="text:danceName"></span> songs <span class="filter-negate">not</span> tagged as <span class="filter-tag" data-bind="text:tagValue"></span></a>
-                    </p>
-                    <p class="filter-item" data-bind="if:url">
-                        <a data-bind="attr:{href:url().replace('{0}','%2B')}"><span class="glyphicon glyphicon-cd"></span> List all songs tagged as <span data-bind="text:tagValue"></span></a>
-                    </p>
-                    <p class="filter-item" data-bind="if:url">
-                        <a data-bind="attr:{href:url().replace('{0}','%2D')}"><span class="glyphicon glyphicon-cd"></span> List all songs <span class="filter-negate">not</span> tagged as <span class="filter-tag" data-bind="text:tagValue"></span></a>
-                    </p>
-                    <p class="filter-item">
-                        <a href="https://www.music4dance.net/blog/tag-filtering"><span class="glyphicon glyphicon-question-sign"></span> Help</a>
-                    </p>
+                <div class="list-group">
+                    <!-- ko if:filteredUrl -->
+                        <a class="list-group-item list-group-item-success" data-bind="attr:{href:filteredUrl().replace('{0}','%2B')}"><span class="glyphicon glyphicon-filter"></span> Filter the list to include only songs tagged as <span class="filter-tag" data-bind="text:tagValue"></span></a>
+                        <a class="list-group-item list-group-item-danger" data-bind="attr:{href:filteredUrl().replace('{0}','%2D')}"><span class="glyphicon glyphicon-filter"></span> Filter the list to include only songs <span class="filter-negate">not</span> tagged as <span class="filter-tag" data-bind="text:tagValue"></span></a>
+                    <!-- /ko -->
+                    <!-- ko if:danceUrl -->
+                        <a class="list-group-item list-group-item-success" data-bind="attr:{href:danceUrl().replace('{0}','%2B')}"><span class="glyphicon glyphicon-tag"></span> List all <span class="filter-dance" data-bind="text:danceName"></span> songs tagged as <span class="filter-tag" data-bind="text:tagValue"></span></a>
+                        <a class="list-group-item list-group-item-danger" data-bind="attr:{href:danceUrl().replace('{0}','%2D')}"><span class="glyphicon glyphicon-tag"></span> List all <span class="filter-dance" data-bind="text:danceName"></span> songs <span class="filter-negate">not</span> tagged as <span class="filter-tag" data-bind="text:tagValue"></span></a>
+                    <!-- /ko -->
+                    <!-- ko if:url -->
+                        <a class="list-group-item list-group-item-success" data-bind="attr:{href:url().replace('{0}','%2B')}"><span class="glyphicon glyphicon-list"></span> List all songs tagged as <span class="filter-tag" data-bind="text:tagValue"></span></a>
+                        <a class="list-group-item list-group-item-danger" data-bind="attr:{href:url().replace('{0}','%2D')}"><span class="glyphicon glyphicon-list"></span> List all songs <span class="filter-negate">not</span> tagged as <span class="filter-tag" data-bind="text:tagValue"></span></a>
+                    <!-- /ko -->
+                        <a class="list-group-item list-group-item-info" href="https://www.music4dance.net/blog/tag-filtering"><span class="glyphicon glyphicon-question-sign"></span> Help</a>
                 </div>
             </div>
             <div class="modal-footer">
