--- a/DanceCalc/m4d/Views/Dance/Details.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Details.cshtml
@@ -3,8 +3,6 @@
 @using m4d.Utilities
 @model SongCounts
 
-@Html.Partial("_SetupFilterScript")
-
 @{
     ViewBag.Title = Model.DanceName + " Information, Top Ten List, and Resources.";
     ViewBag.Description = "General information about the dance" + Model.DanceName + " along with a top ten song list, preferred tempo details, and other resources.";
@@ -25,6 +23,8 @@
     var topSpotify = @DanceMusicService.PurchaseLinksToInfo(@Model.TopSpotify, User.Region());
     var tags = @Model.Dance.SongTags.Tags;
 }
+
+@Html.Partial("_SetupFilterScript")
 
 <ol class="breadcrumb">
     <li><a href="/">Music4Dance</a></li>
@@ -172,6 +172,7 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/knockout")
     @Scripts.Render("~/bundles/musicservice")
     @Scripts.Render("~/bundles/showdance")
 }
