--- a/DanceCalc/m4d/Views/Tag/Index.cshtml
+++ b/DanceCalc/m4d/Views/Tag/Index.cshtml
@@ -65,3 +65,8 @@
         }
     </table>
 }
+
+@section Scripts {
+    @Scripts.Render("~/bundles/knockout")
+    @Scripts.Render("~/bundles/musicservice")
+}
