--- a/DanceCalc/m4d/Views/Admin/InitializationTasks.cshtml
+++ b/DanceCalc/m4d/Views/Admin/InitializationTasks.cshtml
@@ -9,9 +9,10 @@
 
 <h3>Search Indexing</h3>
 <ul>
-    <li>@Html.ActionLink("Reset Index", "ResetSearchIdx")</li>
-    <li>@Html.ActionLink("Load Index (rebuild)", "BuildSearchIdx", new {count=500,rebuild=true}, null)</li>
-    <li>@Html.ActionLink("Load Index (incremental)", "BuildSearchIdx", new { count = 100 }, null)</li>
+    <li>Default: @Html.ActionLink("Reset", "ResetSearchIdx"), @Html.ActionLink("Load (rebuild)", "BuildSearchIdx", new { count = 500, rebuild = true }, null), @Html.ActionLink("Load (incremental)", "BuildSearchIdx", new { count = 100 }, null)</li>
+    <li>Free: @Html.ActionLink("Reset", "ResetSearchIdx", new { id = "free"}, null), @Html.ActionLink("Load (rebuild)", "BuildSearchIdx", new { id = "free", count = 500, rebuild = true }, null), @Html.ActionLink("Load (incremental)", "BuildSearchIdx", new { id = "free", count = 100 }, null)</li>
+    <li>BasicA: @Html.ActionLink("Reset", "ResetSearchIdx", new { id = "basica" }, null), @Html.ActionLink("Load (rebuild)", "BuildSearchIdx", new { id = "basica", count = 500, rebuild = true }, null), @Html.ActionLink("Load (incremental)", "BuildSearchIdx", new { id = "basica", count = 100 }, null)</li>
+    <li>BasicB: @Html.ActionLink("Reset", "ResetSearchIdx", new { id = "basicb" }, null), @Html.ActionLink("Load (rebuild)", "BuildSearchIdx", new { id = "basicb", count = 500, rebuild = true }, null), @Html.ActionLink("Load (incremental)", "BuildSearchIdx", new { id = "basicb", count = 100 }, null)</li>
 </ul>
 
 <h3> Initializiation Tasks</h3>
