Get adminupdate working:  For individual songs we can copy out the property list from the deatils, edit it and restore, which lets us arbitrarily fix mistakes.  Also enabled saving a batch of these to a file and uploading so that we can do the individual fixes locally and then upload a batch to the server...

--- a/DanceCalc/m4d/Views/Song/Details.cshtml
+++ b/DanceCalc/m4d/Views/Song/Details.cshtml
@@ -40,7 +40,14 @@
     <hr />
     <div class="row">
         <div id="songDump" class="col-md-12">
-            <code style="white-space: pre">@Model.ToString()</code>
+        @using (Html.BeginForm("AdminEdit", "Song", null, FormMethod.Post, new {@class = "form-horizontal"}))
+        {
+            @Html.AntiForgeryToken()
+            <input type="hidden" name="songId" value="@Model.SongId"/>
+            <input type="hidden" name="filter" value="@filter.ToString()" />
+            <input type="text" name="properties" value="@Model.ToString()"/>
+            <button type="submit">AdminEdit</button>
+        }
         </div>
     </div>
 
