--- a/DanceCalc/m4d/Views/Admin/UploadBackup.cshtml
+++ b/DanceCalc/m4d/Views/Admin/UploadBackup.cshtml
@@ -66,6 +66,7 @@
         <br />
         <input type="submit" name="reloadDatabase" id="Reload" value="Reload" />
         <input type="submit" name="reloadDatabase" id="Update" value="Update" />
+        <input type="submit" name="reloadDatabase" id="Admin" value="Admin" />
     }
 
     <hr />
