Fix artist link on song details page

--- a/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
@@ -38,7 +38,7 @@
         @Model.Title
         @if (!string.IsNullOrWhiteSpace(@Model.Artist))
         {
-            <small>by @Html.ActionLink(Model.Artist, "search", "song", new {searchString = Model.Artist, dances = "ALL"}, null)</small>
+            <small>by @Html.ActionLink(Model.Artist, "artist", "song", new { name = song.Artist }, null)</small>
         }
     </h1>
 </div>
