--- a/DanceCalc/m4d/App_Code/EchoHelper.cshtml
+++ b/DanceCalc/m4d/App_Code/EchoHelper.cshtml
@@ -33,7 +33,7 @@
         {"Energy", "This song has an energy level of {0:0.00} on a scale of 0.00 to 1.00 where 0.00 is the lowest energy and 1.00 is the highest energy."},
     };
 
-    if (!value.HasValue)
+    if (!value.HasValue  || value == 0.0f)
     {
         return;
     }
